--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EZY: CYBER DICE</title>
+    <title>EZY SYSTEM DICE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,8 +15,8 @@
   <body>
     <main class="app-shell">
       <header>
-        <h1>EZY: CYBER DICE</h1>
-        <p class="tagline">Неоновый бросок для вашего киберпанк-стола</p>
+        <h1>EZY: SYSTEM DICE</h1>
+        <p class="tagline">Удобная проверка ваших навыков</p>
       </header>
 
       <section class="dice-display" aria-live="polite">
@@ -48,7 +48,7 @@
       </section>
 
       <section class="modifier-panel">
-        <label for="modifier-input">Модификатор (необязательно)</label>
+        <label for="modifier-input">Укажи модификатор</label>
         <input id="modifier-input" type="number" placeholder="например, +2" />
         <div class="result-line modifier-output">
           <span>Итог с модификатором:</span>
