--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <main class="app-shell">
       <header>
-        <h1>EZY: SYSTEM DICE</h1>
+        <h1>EZY SYSTEM DICE</h1>
         <p class="tagline">Удобная проверка ваших навыков</p>
       </header>
 
